--- a/post.html
+++ b/post.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Geo blog</title>
+    <title>Travel blog</title>
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
