social buttons (twitter, fb, g+)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="brand" href="#">Travel blog</a>
+
+          <div class="share-buttons">
+            <div class="share-button share-button-fb">
+              <div id="fb-root"></div>
+              <div class="fb-like" data-href="http://dexy.cloudant.com/location/_design/location-app/index.html" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+            </div>
+            <div class="share-button share-button-twitter">
+              <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dexy.cloudant.com/location/_design/location-app/index.html" data-text="travel blog" data-count="none">Tweet</a>
+            </div>
+            <div class="share-button">
+              <div class="g-plusone" data-href="http://dexy.cloudant.com/location/_design/location-app/index.html"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -58,7 +71,28 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-    
+
+      // facebook like
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+      
+      // twitter share
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+
+      // google +1
+      (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      })();
+
+
+
     </script>
 </body>
 </html>
