--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     /* * * CONFIGURATION VARIABLES: THIS CODE IS ONLY AN EXAMPLE * * */
     var disqus_shortname = 'dexytravelblog'; // Required - Replace example with your forum shortname
     var disqus_identifier = '1';
-    var disqus_title = 'a unique title for each page where Disqus is present';
+    var disqus_title = 'home';
     var disqus_url = 'http://dexy.cloudant.com/location/_design/location-app/index.html';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
