added menu position fixed for 768px big devices

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </div>
             </div>
 
-            <div class="span9">
+            <div class="span9 rfloat">
                 <div class="hero-unit map-wrapper">
                     <div id="map"></div>
                 </div>
