--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           <div class="share-buttons">
             <div class="share-button share-button-fb">
               <div id="fb-root"></div>
-              <div class="fb-like" data-href="http://dexy.cloudant.com/location/_design/location-app/index.html" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+              <div class="fb-like" data-href="https://dexy.cloudant.com/location/_design/location-app/index.html" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
             </div>
             <div class="share-button share-button-twitter">
-              <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dexy.cloudant.com/location/_design/location-app/index.html" data-text="travel blog" data-count="none">Tweet</a>
+              <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dexy.cloudant.com/location/_design/location-app/index.html" data-text="travel blog" data-count="none">Tweet</a>
             </div>
             <div class="share-button">
-              <div class="g-plusone" data-href="http://dexy.cloudant.com/location/_design/location-app/index.html"></div>
+              <div class="g-plusone" data-href="https://dexy.cloudant.com/location/_design/location-app/index.html"></div>
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
     
 
     <script type="text/javascript" src="modules.js"></script>
-    <script src="http://www.openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
+    <script src="static/js/OpenLayers.js" type="text/javascript"></script>
     <script type="text/javascript">
         var $ = require('jquery');
         $(document).ready(function() {
@@ -104,7 +104,7 @@
     var disqus_shortname = 'dexytravelblog'; // Required - Replace example with your forum shortname
     var disqus_identifier = '1';
     var disqus_title = 'home';
-    var disqus_url = 'http://dexy.cloudant.com/location/_design/location-app/index.html';
+    var disqus_url = 'https://dexy.cloudant.com/location/_design/location-app/index.html';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
